Minor change to fix sharethis buttons cut off issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+.stButton * {
+box-sizing: content-box;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 .hide-question h2 {
   animation-name: fadeOut;
